Mas formato, un par de imagenes

--- a/PAGINA WEB/Los-Entes.html
+++ b/PAGINA WEB/Los-Entes.html
@@ -39,6 +39,19 @@
 
     <section class="fondo-1" id="home">
         <div class="slides-historia owl-carousel">
+            
+            <!-- Cara 0 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-12">
+                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                        <img src="img/Portada-Entes-Primigenios.png" alt="">
+                                    </div>
+                                </div>
+                        </div>
+                    </section>
+            </div>
             <!-- cara 1 -->
             <div class="single-hero-slide d-flex align-items-end justify-content-center">
                     <section class="matilau-about-us-area">
@@ -52,7 +65,7 @@
                                 </div>
                                 <div class="col-12 col-md-6">
                                     <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
-                                        <img src="img/bg-img/headpiece.png" alt="">
+                                        <img src="img/Elum-Ecoh-Suud.png" alt="">
                                     </div>
                                 </div>
                         </div>
@@ -62,17 +75,17 @@
             <div class="single-hero-slide d-flex align-items-end justify-content-center">
                     <section class="matilau-about-us-area">
                         <div class="container row align-items-center">
+                                <div class="col-12 col-md-6">
+                                        <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                            <img src="img/bg-img/headpiece.png" alt="">
+                                        </div>
+                                </div>
                                 <div class="col-12 col-md-6 section-centrado">
                                         <div class="section-heading">
                                             <p>Imaku-Yen</p>
                                             <h2>La primera inteligencia. El primer error.</h2>
                                         </div>
                                         <p>Elum y Suud crearon a Imaku-Yen, la encarnación de la inteligencia, la solución a su falta de propósito. pero Imaku-Yen era más complejo de lo que sus creadores podían pretender, su inteligencia le aportó curiosidad y su curiosidad sabiduria y lo que se considera el primer caos, la duda.  </p>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
-                                        <img src="img/bg-img/headpiece.png" alt="">
-                                    </div>
                                 </div>
                         </div>
                     </section>
@@ -81,26 +94,14 @@
             <div class="single-hero-slide d-flex align-items-end justify-content-center">
                     <section class="matilau-about-us-area">
                         <div class="container row align-items-center">
-                                <div class="col-12 col-md-6 section-centrado">
+                                <div class="col-12 col-md-5 section-centrado">
                                         <div class="section-heading">
                                             <p>El origen del conflicto primigenio</p>
                                             <h2>El tiempo, la materia y la física</h2>
                                         </div>
                                         <p> Imaku-Yen dedujo que no sabría lo bueno y lo malo si no había consecuencias, y para que las consecuencias existiesen convenció a Suud y Ecoh de crear los tres pilares de la vida: Aan, el tiempo capaz de mostrar las consecuencias, Jinun la materia, y Gint-Settá el movimiento. Los tres heredaron conciencia, existencia, concepto y las ideas para ese concepto, pero también caos.</p>
                                 </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
-                                        <img src="img/bg-img/headpiece.png" alt="">
-                                    </div>
-                                </div>
-                        </div>
-                    </section>
-            </div>
-            <!-- Cara 4 -->
-            <div class="single-hero-slide d-flex align-items-end justify-content-center">
-                    <section class="matilau-about-us-area">
-                        <div class="container row align-items-center">
-                                <div class="col-12 col-md-6 section-centrado">
+                                <div class="col-12 col-md-7 section-centrado">
                                         <div class="section-heading">
                                             <p>Aan, Jinun Y Gint-Settá</p>
                                             <h2>Pilares de la vida</h2>
@@ -109,16 +110,10 @@
                                         Jinun era caprichoso e inestable, nunca se encontraba de la misma manera, y al ser el primer consiente con forma física se dedicó a expandirse y crear cual material se le ocurriera. <br>          
                                         Gint-Setta era intransigente y malhumorado, condenado a dar órdenes a las creaciones de su hermano Jinun, dio a cada partícula creada por este un propósito y un sentido.</p>
                                 </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
-                                        <img src="img/bg-img/headpiece.png" alt="">
-                                    </div>
-                                </div>
                         </div>
                     </section>
             </div>
-
-            <!-- Cara 5 -->
+            <!-- Cara 4 -->
             <div class="single-hero-slide d-flex align-items-end justify-content-center">
                     <section class="matilau-about-us-area">
                         <div class="container row align-items-center">
@@ -130,6 +125,19 @@
                                         <p>Aan creía que el tiempo era susceptible a cambios y lo consideró inconveniente. Por lo que creó a Utemusum, el guardián del futuro. Su propósito era evitar distorsiones en el tiempo sin cuestionar los hechos, por lo que su virtud no era el raciocinio, un ente compuesto mayormente por conocimientos futuros.</p>
                                 </div>
                                 <div class="col-12 col-md-6">
+                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                        <img src="img/bg-img/headpiece.png" alt="">
+                                    </div>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+
+             <!-- Cara 5 -->
+             <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-12">
                                     <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
                                         <img src="img/bg-img/headpiece.png" alt="">
                                     </div>
@@ -162,7 +170,7 @@
             <div class="single-hero-slide d-flex align-items-end justify-content-center">
                     <section class="matilau-about-us-area">
                         <div class="container row align-items-center">
-                                <div class="col-12 col-md-6 section-centrado">
+                                <div class="col-12 col-md-5 section-centrado">
                                         <div class="section-heading">
                                             <p>Imaku-Yin</p>
                                             <h2>La duda lleva al miedo y este al odio</h2>
@@ -170,10 +178,18 @@
                                         <p>Entonces su caos se manifestó y dudó si esta era una deducción correcta y así nació su segunda personalidad, Imaku-Yin, un ser de miedo y odio. <br>
                                             La duda de Imaku-Yen fue lo que desencadeno en Imaku-Yin el concepto de su existencia. Por contraposición creía que lo que dañe a Ummani es lo bueno, y lo que la proteja es lo malo.</p>
                                 </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
-                                        <img src="img/bg-img/headpiece.png" alt="">
+                                <div class="col-0 col-md-1">
+                                        <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                            <img src="img/bg-img/headpiece.png" alt="">
+                                        </div>
                                     </div>
+                                
+                                <div class="col-12 col-md-6 section-centrado">
+                                        <div class="section-heading">
+                                            <p>El destino y el odio</p>
+                                            <h2>Un complot razonable</h2>
+                                        </div>
+                                        <p>Imaku Yin introdujo en Utemusum un conflicto, si era verdad que proteger a Ummani era el bien supremo, podría existir la posibilidad justificada de modificar el tiempo para beneficiar esa premisa, si esto sucedía el objetivo último del guardián del tiempo seria puesto en peligro y su existencia irrelevante. Este argumento permitió a Imaku-Yin manipularlo para crear el ser más poderoso hasta el momento: Set, el fin de las cosas y la muerte. </p>
                                 </div>
                         </div>
                     </section>
@@ -183,14 +199,7 @@
             <div class="single-hero-slide d-flex align-items-end justify-content-center">
                     <section class="matilau-about-us-area">
                         <div class="container row align-items-center">
-                                <div class="col-12 col-md-6 section-centrado">
-                                        <div class="section-heading">
-                                            <p>El destino y el odio</p>
-                                            <h2>Un complot razonable</h2>
-                                        </div>
-                                        <p>Imaku Yin introdujo en Utemusum un conflicto, si era verdad que proteger a Ummani era el bien supremo, podría existir la posibilidad justificada de modificar el tiempo para beneficiar esa premisa, si esto sucedía el objetivo último del guardián del tiempo seria puesto en peligro y su existencia irrelevante. Este argumento permitió a Imaku-Yin manipularlo para crear el ser más poderoso hasta el momento: Set, el fin de las cosas y la muerte. </p>
-                                </div>
-                                <div class="col-12 col-md-6">
+                                <div class="col-12 col-md-12">
                                     <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
                                         <img src="img/bg-img/headpiece.png" alt="">
                                     </div>
@@ -203,18 +212,13 @@
             <div class="single-hero-slide d-flex align-items-end justify-content-center">
                     <section class="matilau-about-us-area">
                         <div class="container row align-items-center">
-                                <div class="col-12 col-md-6 section-centrado">
+                                <div class="col-12 col-md-12 section-centrado">
                                         <div class="section-heading">
                                             <p>Set</p>
                                             <h2>El gran error</h2>
                                         </div>
                                         <p>Aan sabe secretos que tanto el destino como el odio desconocen, Imaku-Yin había sido creado del caos y sus creaciones solo podrían ser seres de caos. Set era poderoso como Utemusum e inteligente como Imaku Yin pero también poseía caos, pues el objetivo de su existencia no fue acabar con Ummani; el apuntaba más alto, eliminar a Ecoh se volvió su objetivo. Eliminar a la misma existencia. Y por si fuera poco el error de cálculo de Imaku Yin, Set no odiaba a Ummani, sino que fue el primer ser en sentir atracción por otro ser. La muerte amo a la vida. <br>
                                                 De estos seres nacieron los seres vivos, nacidos de la vida y destinados a la muerte. </p>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
-                                        <img src="img/bg-img/headpiece.png" alt="">
-                                    </div>
                                 </div>
                         </div>
                     </section>
