--- a/PAGINA WEB/Los-Entes.html
+++ b/PAGINA WEB/Los-Entes.html
@@ -230,6 +230,123 @@
         </div>
     </section>
 
+<!-- *** inicio carrusel de los posteriores -->
+
+    <section class="fondo-2" id="home">
+
+        <div class="trans-NaT"></div>
+        <div class="slides-historia owl-carousel">
+            
+            <!-- Cara 0 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-12">
+                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                        <img src="img/Portada-Entes-Posteriores.png" alt="" style="width: 100%; height: auto;">
+                                    </div>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+            <!-- cara 1 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-8 section-centrado">
+                                        <div class="section-heading">
+                                            <p>Alo-boe y Yahar</p>
+                                            <h2>Primeros pasos</h2>
+                                        </div>
+                                        <p>
+                                            Aan, Jinun y Gint-Settá crearon más entes durante la preparación de Ummani. Algunos como medio para mejorarlo, otros como simples mecanismos de ayuda y otros como prueba y error. <br>
+                                            Los primeros fueron Alo-boe y Yahar creados principalmente por Gint-Settá para manipular estados concretos de la materia, Alo-boe obtuvo el control y voluntad de los gases y líquidos  mientras que Yahar controlaba los elementos plasmáticos que generaban luz en el universo.
+                                        </p>
+                                </div>
+                                <div class="col-12 col-md-4">
+                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                        <img src="img/Elum-Ecoh-Suud.png" alt="">
+                                    </div>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+            <!-- Cara 2 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 section-centrado">
+                                        <div class="section-heading">
+                                            <p>Ura, Niom y Maerko </p>
+                                            <h2>Las motivaciones.</h2>
+                                        </div>
+                                        <p>
+                                                Ura, Niom y Maerko eran los tres entes creados por Imaku Yen y los tres iniciales para dar motivación al resto de seres. Estos tres daban necesidades de placer, poder y diversión respectivamente. Los tres trabajaban en conjuntos en todo momento de forma armónica, pero durante el conflicto entre los entes provocado por Imaku Yin y Utemusum, Niom, el más antiguo de los tres, intentó apoderarse de todo el espectro de necesidades de los seres. Maerko y Ura decidieron fusionarse para poder consumir a ese ente fuera de control, la personalidad dominante en esta batalla resulto ser Maerko.
+                                        </p>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+                <!-- Cara 3 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-12 section-centrado" style="background-image: url('img/Ruubi.png'); padding-right: 65%;"> 
+                                    <div class="section-heading">
+                                            <p>Ruubi</p>
+                                            <h2>El arma imperfecta</h2>
+                                    </div>
+                                    <p> 
+                                        Ruubi fue el intento fallido por crear un arma capaz de eliminar a un ente. Fue creado por Imaku Yin para eliminar a Ummani. Ruubi desarrolló un sentido retorcido en su motivo de ser, el cual era mantener la paz y la concordia a toda costa, aun si para mantenerla era necesario eliminar por completo y con crueldad una de las partes en conflicto. 
+                                    </p>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+            <!-- Cara 4 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-6 section-centrado">
+                                        <div class="section-heading">
+                                            <p>Lofy</p>
+                                            <h2>El dolor en el glande</h2>
+                                        </div>
+                                        <p>
+                                            Ura, Maerko y Ruubi fueron creados prácticamente a la vez. Durante uno de los cambios de personalidad de los Imaku nació un hibrido entre estas tres entidades, fue desechado y maldecido como abominación tanto por Imaku Yen como por Imaku Yin, su nombre era Lofy y era una malgama de necesidades por satisfacer, el ser más caótico creado, con una mentalidad distorsionada y tan brillante como la de los mismos Imaku.
+                                        </p>
+
+                                </div>
+                                <div class="col-12 col-md-6">
+                                        <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                            <img src="img/Lofy.png" alt="">
+                                        </div>
+                                </div>
+
+                        </div>
+                    </section>
+            </div>
+
+            <!-- Cara 5 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-6 section-centrado">
+                                        <p>
+                                            Muchos otros entes menos relevantes para nuestra historia fueron creados, muchos tienen algún impacto en Fraterra, otros no, otros fueron sellados o simplemente carecen de sentido y yacen inertes en donde sea que estén.
+                                        </p>
+                                </div>
+                                <div class="col-12 col-md-6">
+                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                        <img src="img/bg-img/headpiece.png" alt="">
+                                    </div>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+        </div>
+    </section>
+
 
     <div id="pie">
         <div class="matilau-pie"></div>
