--- a/PAGINA WEB/Los-Entes.html
+++ b/PAGINA WEB/Los-Entes.html
@@ -345,8 +345,114 @@
                     </section>
             </div>
         </div>
+        <div class="trans-TaN"></div>
     </section>
 
+<!-- *** inicio carrusel de los Dioses -->
+
+    <section class="fondo-1" id="home">
+
+        <div class="slides-historia owl-carousel">
+            
+            <!-- Cara 0 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-12">
+                                    <div class="matilau-about-us-thumb wow fadeInUp" data-wow-delay="0.5s">
+                                        <br><br><br>
+                                        <img src="img/Dios.jpg" alt="" style="width: 100%; height: 100%; border-radius: 20%;">
+                                    </div>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+            <!-- cara 1 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="section-heading col-12" style="text-align: center; text-shadow: 1px 1px 3px orange;">
+                                        <br><br>
+                                        <h2>La dicotomía de Set</h2>
+                                </div>
+                                <div class="col-12 col-md-6 section-centrado">
+                                        <p>
+                                            Set sentía una atracción irrefrenable hacia Ummani, su objetivo y su razón de ser habían sido grabadas en su ser desde su misma creación, destruir por completo todo rastro de vida. Toda creación de Ummani era, según lo que sus progenitores habían inducido en él, una abominación al sentido intrínseco de la existencia, y sin ella,     
+                                        </p>
+                                </div>
+                                <div class="col-12 col-md-6 section-centrado">
+                                    <p>
+                                        el bien podría redefinirse como la consecución natural de acciones y efectos donde las decisiones de los creadores del universo fuesen las únicas alteraciones permitidas. Las premisas eran irrefutables para Set, sin embargo introducían como resultado una conclusión que no le beneficiaban, si era demasiado aplicado podría acabar con su propósito y con su fin, la eliminación de él mismo.    
+                                    </p>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+            <!-- Cara 2 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="section-heading col-12" style="text-align: center; text-shadow: 1px 1px 3px orange;">
+                                        <br><br>
+                                        <h2>Set contra todo</h2>
+                                </div>
+                                <div class="col-12 col-md-6 section-centrado">
+                                        <p>
+                                            La inteligencia heredada de Imaku Yin había degenerado sus conceptos pues permitían crear conceptos y tomar decisiones, evolucionar con el transcurso de sus elecciones y una de ellas había sido no eliminar a Ummani, pero si evitar que corrompiese el universo con su esencia.    
+                                        </p>
+                                </div>
+                                <div class="col-12 col-md-6 section-centrado">
+                                        <p>
+                                            Lo que producía inevitablemente conflictos entre la mayoría de los primigenios y Set, y  por otro lado, Set tampoco recibía la simpatía de Imaku Yin o Utemusum que lo consideraban un fracaso.
+                                        </p>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+                <!-- Cara 3 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-12 section-centrado"> 
+                                    <div class="section-heading">
+                                            <p>Set y Ummani</p>
+                                            <h2>La tregua</h2>
+                                    </div>
+                                    <p> 
+                                            Durante las muchas eras en las que Set y Ummani se enfrentaron, parecía claro que Ummani no podría mantener a ninguno de sus hijos con vida demasiado tiempo por lo que la frustración se transformó en aceptación y se dispuso a desaparecer, Set por su parte no podía permitirlo por lo que propuso una solución, dejaría a sus creaciones vivir en un espacio confinado donde podrían crecer y multiplicarse a sus anchas. Sin embargo la tregua seria controlada por Ummani y Set. <br>
+                                            El lugar seleccionado por Ummani fue nombrado Fraterra y el trono de sus regentes, situado en las cumbres del monte Setumma, el Obelisco.
+                                    </p>
+                                </div>
+                        </div>
+                    </section>
+            </div>
+            <!-- Cara 4 -->
+            <div class="single-hero-slide d-flex align-items-end justify-content-center">
+                    <section class="matilau-about-us-area">
+                        <div class="container row align-items-center">
+                                <div class="col-12 col-md-12 section-centrado">
+                                        <div class="section-heading">
+                                            <br><br><br>
+                                            <h2>Los Dioses</h2>
+                                        </div>
+                                        <p>
+                                            Varios entes se unieron para poder vigilar y garantizar el orden del pacto. Estos eran: <br>
+                                            <strong style="color: cyan">Ummani</strong> nombrado diosa madre y representada por una mujer pelirroja, alta y voluptuosa. <br>
+                                            <strong style="color: cyan">Set</strong> nombrado dios de la muerte, representado por un hombre alto y fornido de rasgos sombríos. <br>
+                                            <strong style="color: cyan">Imaku-Yen</strong> nombrado como el dios de la sabiduría y representado como un anciano. <br>
+                                            <strong style="color: cyan">Aan</strong> nombrado dios del tiempo y representado como un infante. <br>
+                                            <strong style="color: cyan">Yahar</strong> nombrada diosa del sol y representado como una joven siega de blancos rizos. <br>
+                                            <strong style="color: cyan">Ruubi</strong> nombrada diosa de la guerra y representada como una mujer alta con una lanza y un escudo. <br>
+                                            <strong style="color: cyan">Maerko</strong> nombrada diosa de las artes y los deseos y representada como una hermosa doncella. <br>
+                                            <strong style="color: cyan">Alo-boe</strong> nombrado dios del viento y el agua representado como un hombre maduro y fornido sentado en un orbe celeste.
+                                        </p>
+
+                                </div>
+                        </div>
+                    </section>
+            </div>
+        </div>
+    </section>
 
     <div id="pie">
         <div class="matilau-pie"></div>
