--- a/PAGINA WEB/Los-Entes.html
+++ b/PAGINA WEB/Los-Entes.html
@@ -441,7 +441,7 @@
                                             <strong style="color: cyan">Set</strong> nombrado dios de la muerte, representado por un hombre alto y fornido de rasgos sombríos. <br>
                                             <strong style="color: cyan">Imaku-Yen</strong> nombrado como el dios de la sabiduría y representado como un anciano. <br>
                                             <strong style="color: cyan">Aan</strong> nombrado dios del tiempo y representado como un infante. <br>
-                                            <strong style="color: cyan">Yahar</strong> nombrada diosa del sol y representado como una joven siega de blancos rizos. <br>
+                                            <strong style="color: cyan">Yahar</strong> nombrada diosa del sol y representado como una joven ciega de blancos rizos. <br>
                                             <strong style="color: cyan">Ruubi</strong> nombrada diosa de la guerra y representada como una mujer alta con una lanza y un escudo. <br>
                                             <strong style="color: cyan">Maerko</strong> nombrada diosa de las artes y los deseos y representada como una hermosa doncella. <br>
                                             <strong style="color: cyan">Alo-boe</strong> nombrado dios del viento y el agua representado como un hombre maduro y fornido sentado en un orbe celeste.
